kubernetes/deploy-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: auth
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      run: auth
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
        - image: ghcr.io/bondjono19/auth-service:latest
          name: auth
          ports:
            - containerPort: 5000
