kubernetes/deploy-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: chat
  name: chat
spec:
  replicas: 2
  selector:
    matchLabels:
      run: chat
  template:
    metadata:
      labels:
        run: chat
    spec:
      containers:
        - image: ghcr.io/bondjono19/chat-service:latest
          name: chat
