kubernetes/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: auth
  name: service-auth
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: auth
  type: ClusterIP
