kubernetes/service-chat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: chat
  name: service-chat
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: chat
  type: ClusterIP
