kubernetes/service-db-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mongo
  name: service-mongo
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    run: mongo
  type: ClusterIP
