kubernetes/service-db-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: redis
  name: service-redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    run: redis
  type: ClusterIP
