kubernetes/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: postgres
  name: postgres-service
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    run: postgres
  type: ClusterIP
